--- a/todo.txt
+++ b/todo.txt
@@ -3,5 +3,6 @@
 - Put under Git - DONE
 - Create required classes - logged in user, anonymous user, agenda
     - inherit from Django user class
-- Create login form
-- Create register form
+- Create login form - DONE
+- Create register form - DONE
+-
